Bicycle-api: fix swagger
